many files added

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-		<title>News Scraper</title>
+
+    <title>Scraper of News</title>
+
+    <meta charset="utf-8">
+
+    <!-- jQuery CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+          
+    <!-- custom CSS & JS -->
+    <link rel="stylesheet" href="/stylesheet/custom.css">
+    <script src="/javascript/custom.js"></script>
+
 </head>
+
 <body>
-	{{{ body }}}
+    {{{body}}}
 </body>
+
 </html>
