--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,60 @@
-<!-- output headline, summary, and url onto page -->
 
-<ul>
-	{{#each art}}
-	<<li>
-		<p>Headline: {{headline}}</p>
-		<p>Summary: {{summary}}</p>
-		<p>URL: {{url}}</p>
-	</li>
-	{{/each}}
-</ul>
+ <nav>
+    <div>
+      <p>Web Scraped News!</p>
+      <ul class = "right">
+
+        <li>
+            <a href = "/scrape" class="waves-effect waves-light btn"><i class="material-icons right">system_update_alt</i>Scrape!</a>
+        </li>
+
+              
+      </ul>
+    </div>
+  </nav>
+
+  <br>
+
+  <!-- Articles -->
+<div class="container">
+
+    <table>
+        <tbody>
+
+            {{#each articles}}
+            <div class=row>
+
+                <div class="col-sm-8">
+                    <a href="{{this.link}}" class="collection-item blue-text" target="_blank">{{this.title}}</a>
+                </div>
+                <div class="col-sm-4">
+                    <button class="noteButton waves-effect waves-light btn-flat blue" id="{{this._id}}">Add Note</button>
+                </div>
+
+            </div>
+            {{/each}}
+
+        </tbody>
+    </table>
+
+</div>
+        
+<!-- Note modal -->
+<div id="noteModal" class="modal modal-fixed-footer">
+
+    <div class="modal-content">
+        <p>Notes</p>
+        <ul class="messages collection"></ul>
+    </div>
+    
+    <div class="modal-footer">
+        <form name="noteForm" id="noteForm">
+                    <input required placeholder="Enter a note here" type="text" name="noteText" id="noteText">
+            <button class="btn green left" type="submit" id="noteButton">
+                Post Note!
+            </button>
+            <a href="/" class="modal-action modal-close waves-effect waves-light btn-flat">Close</a>
+        </form>
+    </div>
+
+</div>
