--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,13 +6,21 @@
     <title>Scraper of News</title>
 
     <meta charset="utf-8">
+    
+    <!-- Tab Image -->
+    <link rel="icon" href="https://cdn2.iconfinder.com/data/icons/circle-icons-1/64/news-128.png">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- jQuery CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <!-- Compiled and minified Materialize CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+
+    <!-- Compiled and minified Materialize JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
           
-    <!-- custom CSS & JS -->
-    <link rel="stylesheet" href="/stylesheet/custom.css">
-    <script src="/javascript/custom.js"></script>
+    <script src="/app.js"></script>
 
 </head>
 
